--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,4 +19,10 @@
         android:layout_centerHorizontal="true"
         android:text="@string/common_signin_button_text_long" />
 
+    <Button
+        android:text="Sign Out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/signout_button"/>
+
 </LinearLayout>
