Changed Server interactions

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,7 +46,7 @@
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/user_public_liked"/>
+                android:id="@+id/user_liked_list"/>
 
             <Button
                 android:text="Button"
