--- a/app/src/main/res/layout/fragment_tattoo_item.xml
+++ b/app/src/main/res/layout/fragment_tattoo_item.xml
@@ -5,9 +5,13 @@
               android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/item_image"
-        android:layout_weight="1"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerInside"
+        android:gravity="end|center_vertical"
+        android:padding="10dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        />
 </LinearLayout>
