--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -21,7 +21,8 @@
                 android:id="@+id/tattoo_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+                tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
+                android:contentDescription="Image of the Tattoo"/>
 
             <ListView
                 android:id="@+id/tag_list"
