--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -13,7 +13,8 @@
         android:id="@+id/tattoo_image_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
+        android:contentDescription="Image of the Tattoo"/>
 
     <Switch
         android:id="@+id/switch_visibility"
