--- a/app/src/main/res/layout/fragment_tattoo_item.xml
+++ b/app/src/main/res/layout/fragment_tattoo_item.xml
@@ -13,5 +13,5 @@
         android:gravity="end|center_vertical"
         android:padding="10dp"
         app:srcCompat="@mipmap/ic_launcher"
-        />
+        android:contentDescription="Image of the Tattoo"/>
 </LinearLayout>
