--- a/app/src/main/res/layout/tag_edit_layout.xml
+++ b/app/src/main/res/layout/tag_edit_layout.xml
@@ -7,7 +7,7 @@
         android:id="@+id/tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="9dp"
         android:textColor="#404040"
         android:textSize="20sp" />
@@ -16,9 +16,9 @@
         android:id="@+id/tag_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
         android:background="@android:drawable/ic_menu_close_clear_cancel" />
 
 </RelativeLayout>
