--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -19,7 +19,7 @@
     <Switch
         android:id="@+id/switch_visibility"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:showText="true"
         android:textAlignment="viewStart"
