--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -21,7 +21,7 @@
             android:text="See More"
             android:layout_width="159dp"
             android:layout_height="wrap_content"
-            android:id="@+id/seemore_recent"
+            android:id="@+id/see_more_recent"
             />
     </LinearLayout>
 
@@ -46,7 +46,7 @@
             android:text="See More"
             android:layout_width="159dp"
             android:layout_height="wrap_content"
-            android:id="@+id/seemore_popular"
+            android:id="@+id/see_more_popular"
             />
     </LinearLayout>
 
