Fixed i18n issues. Now every string uses a resource

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,14 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="User Name"
+        android:hint="@string/user_name"
         android:ems="10"
         android:id="@+id/editText_username"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"/>
 
     <Button
-        android:text="Register"
+        android:text="@string/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_register"
