--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,7 +10,7 @@
         android:id="@+id/no_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No Result Found"
+        android:text="@string/no_result_found"
         android:visibility="invisible"/>
 
     <android.support.v7.widget.RecyclerView
