--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
-                android:contentDescription="Image of the Tattoo"/>
+                android:contentDescription="@string/tattoo_description"/>
 
             <ListView
                 android:id="@+id/tag_list"
@@ -40,13 +40,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="by    "/>
+                    android:text="@string/by"/>
 
                 <TextView
                     android:id="@+id/owner_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="User"/>
+                    android:text="@string/user"/>
             </LinearLayout>
 
         </LinearLayout>
