--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -19,14 +19,13 @@
             <TextView
                 android:id="@+id/tv_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Liked"/>
+                android:text="@string/liked"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_liked"
@@ -37,7 +36,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Uploaded"/>
+                android:text="@string/uploaded"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_uploaded"
