--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="Private Tattoos"
+                android:text="@string/private_tattoos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_user_private"/>
@@ -27,7 +27,7 @@
                 android:id="@+id/user_private_list"/>
 
             <TextView
-                android:text="Public Tattoos"
+                android:text="@string/public_tattoos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_user_public"/>
@@ -38,7 +38,7 @@
                 android:id="@+id/user_public_list"/>
 
             <TextView
-                android:text="Liked Tattoos"
+                android:text="@string/liked_tattoos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/label_user_liked"/>
@@ -49,7 +49,7 @@
                 android:id="@+id/user_liked_list"/>
 
             <Button
-                android:text="Sign-out"
+                android:text="@string/sign_out"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/signout_button"/>
@@ -58,7 +58,7 @@
                 android:id="@+id/upload_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Upload"/>
+                android:text="@string/upload"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
