--- a/app/src/main/res/layout/tag_edit_layout.xml
+++ b/app/src/main/res/layout/tag_edit_layout.xml
@@ -1,7 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/tag_name"
@@ -9,16 +9,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="9dp"
+        android:layout_weight="0.99"
         android:textColor="#404040"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/tag_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
         android:layout_marginEnd="15dp"
-        android:background="@android:drawable/ic_menu_close_clear_cancel" />
+        android:layout_marginStart="10dp"
+        android:layout_weight="0.01"
+        android:background="@android:drawable/ic_menu_close_clear_cancel"/>
 
-</RelativeLayout>
+</LinearLayout>
