Fixed API-version incompatibilities

--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="643dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="8dp">
@@ -20,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:showText="true"
+        app:showText="true"
         android:textAlignment="viewStart"
         android:textOff="@string/sw_public"
         android:textOn="@string/sw_private"/>
