--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:showText="true"
+        android:showText="true"
         android:textAlignment="viewStart"
         android:textOff="@string/sw_public"
         android:textOn="@string/sw_private"/>
