--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -70,6 +70,14 @@
                     android:text="Like"/>
             </LinearLayout>
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_camera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@android:drawable/ic_menu_camera"/>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
