--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -13,6 +13,7 @@
         android:id="@+id/tattoo_image_upload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
         android:contentDescription="@string/tattoo_description"/>
 
