--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content">
 
         <SearchView
+            android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
