--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
@@ -12,7 +13,15 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/user_image"
+                android:layout_width="202dp"
+                android:layout_height="202dp"
+                android:layout_weight="1.60"
+                app:srcCompat="@drawable/common_google_signin_btn_icon_dark"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,6 +106,7 @@
                 android:src="@drawable/ic_file_upload_black_24dp"/>
 
         </LinearLayout>
+
     </android.support.v4.widget.NestedScrollView>
 
 
