Added SearchView on Toolbar. Closes #6

--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -15,10 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <SearchView
-                android:id="@+id/search_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            <!--<SearchView-->
+                <!--android:id="@+id/search_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"/>-->
 
             <LinearLayout
                 android:orientation="horizontal"
