--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeContainer"
+    android:background="@drawable/discover_background2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
@@ -15,13 +16,12 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="?attr/colorPrimary"
             android:theme="@style/ToolBarStyle"
+            android:background="@drawable/background_toolbar_translucent"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <TextView
@@ -40,8 +40,9 @@
             android:id="@+id/see_more_recent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/recent_list"
             android:layout_alignStart="@+id/see_more_popular"
-            android:layout_below="@+id/toolbar"
+            android:layout_marginBottom="30dp"
             android:text="@string/see_more"/>
 
 
@@ -49,10 +50,11 @@
             android:id="@+id/see_more_popular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/recent_list"
-            android:layout_below="@+id/recent_list"
+            android:layout_above="@+id/popular_list"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="30dp"
+            android:layout_marginEnd="21dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="23dp"
             android:text="@string/see_more"/>
 
 
@@ -60,16 +62,18 @@
             android:id="@+id/popular_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/see_more_popular"
-            android:layout_marginTop="18dp"/>
+            android:layout_marginBottom="30dp"
+            android:paddingBottom="10dp"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recent_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/see_more_recent"
-            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/see_more_popular"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="31dp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/toolbar"
             app:layout_constraintRight_toRightOf="@+id/toolbar"
@@ -80,23 +84,24 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView"
-            android:layout_alignTop="@+id/see_more_popular"
-            android:text="@string/popular"/>
+            android:text="@string/popular"
+            android:layout_alignBaseline="@+id/see_more_popular"
+            android:layout_alignBottom="@+id/see_more_popular"
+            android:layout_alignStart="@+id/textView"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp"
-            app:srcCompat="@drawable/ic_person_black_24dp"/>
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab_profile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_gravity="bottom|end"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:layout_marginEnd="10dp"-->
+            <!--app:borderWidth="0dp"-->
+            <!--app:elevation="6dp"-->
+            <!--app:pressedTranslationZ="12dp"-->
+            <!--app:srcCompat="@drawable/ic_person_black_24dp"/>-->
 
 
     </RelativeLayout>
