--- a/app/src/main/res/layout/activity_see_more.xml
+++ b/app/src/main/res/layout/activity_see_more.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tattood.tattood.SeeMore">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="395dp"
-        android:layout_height="match_parent"
+        android:layout_height="576dp"
         android:id="@+id/list_view"
-        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp"/>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
