--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,5 @@
     <color name="colorDark">#3c1b0e</color>
     <color name="colorPurple">#4b1b61</color>
     <color name="colorPink">#c75ba5</color>
-
-
-
-
+    <color name="black_alpha_40">#969c5e5f</color>
 </resources>
